--- a/src/styles/palettes/earth.css
+++ b/src/styles/palettes/earth.css
@@ -248,7 +248,7 @@
 
   /* Switch */
   --el-switch-active: #00754a;          /* Green Accent */
-  --el-switch-inactive: #f9f9f9;       /* Neutral Cool */
+  --el-switch-inactive: #edebe9;       /* Ceramic */
   --el-switch-thumb: #ffffff;           /* White */
 
   /* Targets & Plans */
